--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Karakalpak</h1>
+    <h1>Hello Karakalpak My name is Berdimurat</h1>
 </body>
 </html>
